--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ Checkbox Radio Button
     background-image: url("../img/icons/icon-checkbox.png");
 }
 .checkbox {
-    margin: 0 10px;
+       text-align: center;
 }
 .checkbox input[type="checkbox"],
 .checkbox-inline input[type="checkbox"],
@@ -293,7 +293,7 @@ button
 .form-btn-group {
     clear: both;
     margin-top: 0px;
-    overflow: hidden;
+ 
     text-align: center;
     margin-left: 100px;
     margin-top: 10px;
@@ -419,7 +419,7 @@ a.button:focus {
     display: inline-block;
     float: left;
     height: 100%;
-    line-height: 38px;
+    line-height: 40px;
     text-align: center;
     width: 40px;
 }
@@ -695,7 +695,7 @@ Dropdown
     content: "";
     position: absolute;
     right: 14px;
-    top: 13px;
+     top: 14px;
 }
 .check-btn-form-uie {
     margin: 5px 0 10px;
@@ -1603,9 +1603,7 @@ Loader
 Application form action ablock
 \*------------------------------------*/
 
-.app-action-form {
-    padding:  15px 15px 0 15px;
-}
+
 .heading {
     color: #5C5C5C;
     font-weight: bold;
@@ -1618,7 +1616,6 @@ Application form action ablock
 .form-action-field {
     border-bottom: 1px solid #D8D8D8;
     border-top: 1px solid #D8D8D8;
-    margin-top: 10px;
     padding-bottom: 10px;
     padding-top: 10px;
 }
@@ -1632,11 +1629,14 @@ Application form action ablock
     width: 100px;
 }
 .set-empty {
-    margin-top: 5px;
+    margin-top: 8px;
 }
 
 .title {
-    padding: 15px 15px 10px;
+    padding: 15px;
+}
+.app-action-form .title {
+    padding: 10px 0;
 }
 /*------------------------------------*\
 Panel
@@ -1712,12 +1712,15 @@ Panel
     font-size: 12px;
 }
 .page a {
-    border: 1px solid #D8D8D8;
+    border: 1px solid #d8d8d8;
     color: #120e5b;
     display: inline-block;
+    float: left;
     font-size: 9px;
     height: 20px;
-    line-height: 18px;
+    line-height: 16px;
+    margin-right: 3px;
+    margin-top: 5px;
     text-align: center;
     width: 20px;
 }
@@ -1731,43 +1734,51 @@ Panel
     text-align: center;
     width: auto
 }
-.view,
-.page,
-.records {
+.view, .page, .records {
     float: left;
+    line-height: 30px;
     margin-right: 15px;
+}
+.page span:first-child{
+    float: left;
+    margin-right: 5px;
 }
 .pagination-block {
     height: 45px;
-    line-height: 45px;
+   
 }
 .pages-info {
-    position: relative;
     float: left;
+    padding: 10px;
+    position: relative;
     width: auto;
-    padding: 0 10px;
 }
 .page,
 .view {
     position: relative;
 }
-.page:before,
-.view:before {
-    background-color: #5C5C5C;
+.page > span {
+    float: left;
+}
+.page::before, .view::before {
+    background-color: #5c5c5c;
     content: "";
     display: block;
     height: 13px;
     position: absolute;
     right: -8px;
-    top: 17px;
+    top: 9px;
     width: 1px;
 }
-.page .dropdown-list,
-.view .dropdown-list {
+.page .dropdown-list, .view .dropdown-list {
+    border: medium none;
     display: inline-block;
+    float: left;
     font-size: 12px;
-    height:20px;
+    height: 20px;
     line-height: 16px;
+    margin-right: 3px;
+    margin-top: 5px;
     padding: 0;
 }
 .page .dropdown-list ul li,
@@ -1776,17 +1787,21 @@ Panel
     height: 19px;
     padding: 0 5px;
 }
-.page .dropdown-list .selected-listitem,
-.view .dropdown-list .selected-listitem {
+.view {
+    margin-left: 5px;
+}
+.page .dropdown-list .selected-listitem, .view .dropdown-list .selected-listitem {
+    border: 1px solid #d8d8d8;
+    height: 20px;
+    line-height: 16px;
     padding: 0 20px 0 5px;
 }
-.page .selected-listitem::before,
-.view  .selected-listitem::before {
-    right: 4px;
-    top: 7px;
+.page .selected-listitem::before, .view .selected-listitem::before {
     border-left: 4px solid #ffffff;
     border-right: 4px solid #ffffff;
     border-top: 4px solid #373374;
+    right: 4px;
+    top: 8px;
 }
 .page .dropdown-list ul,
 .view .dropdown-list ul {
@@ -1798,7 +1813,7 @@ Panel
 .grid-action-group {
     border: 1px solid #D8D8D8;
     float: right;
-    margin: 7px;
+    margin: 10px;
 }
 .grid-action-group a {
     border-right: 1px solid #D8D8D8;
@@ -1984,9 +1999,8 @@ Table
     color: #2991D6;
 }
 .table-grid th span {
-    display: inherit;
-    height: 35px;
-    padding: 0 40px 0 10px;
+    display: inline-block;
+    padding: 0 20px 0 10px;
     vertical-align: middle;
 }
 .table-grid td {
@@ -1997,6 +2011,13 @@ Table
     padding-left: 10px;
     padding-right: 10px;
     vertical-align: middle;
+}
+.table-grid th span.sorting {
+    display: inline-block;
+    margin-right: 5px;
+    margin-top: 11px;
+    padding: 0;
+    width: auto;
 }
 #table-grid.table-record {
     height: 470px;
@@ -2024,11 +2045,12 @@ Table
     font-size: 17px;
     font-weight: bold;
     padding: 0;
-	color:#2991d6;line-height: 25px;
+	color:#2991d6; line-height: 28px;
 }
 .table-grid th.more-field-show  span{
     padding: 0 0 0 10px;color:#ffffff;
 }
+
 .table-grid td.more-field-show {
     padding: 0;
 }
@@ -2042,6 +2064,26 @@ Table
 	
 }
 .table-grid td.more-field-show a:hover span{background-color:#2991d6;color:#ffffff;}
+.table-grid th span.sorting.sortable a.asc, .table-grid th span.sorting.sortable a.desc {
+    color: #ffffff;
+}
+.table-grid th span.sorting  a.asc, .table-grid th span.sorting  a.desc {
+   color:#ffffff;
+}
+.table-grid th span.sorting a {
+ color:#6ab2e2;
+    display: block;
+    font-size: 14px;
+    margin-top: -9px;
+}
+.table-grid th span.sorting a.asc.disable,.table-grid th span.sorting a.desc.disable{ color:#6ab2e2;}
+.table-grid .checkbox { margin: 0;}
+.table-grid th span.sorting .sorting-order {
+    color: #fff;
+    line-height: 10px;
+    margin-bottom: 5px;
+    margin-top: -3px;
+}
 
 /*------------------------------------*\
 Forms Element 
